jzy3D tests must start on first thread